Initial check-in merge of ODK Collect 2.0 and Tables database structures. Data Type still integer.